# PP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  instruction.txt  timings.txt
Include/: MeshDefinition.h  Parafun.h  PardisoSolver.h
src/: Parafun.cpp  PardisoSolver.cpp  main_cmd.cpp
